# ChangeLog for dev-lang/tcl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/tcl/ChangeLog,v 1.209 2015/03/17 18:46:05 jlec Exp $

  17 Mar 2015; Justin Lecher <jlec@gentoo.org> tcl-8.5.17-r100.ebuild:
  Negate the blocker

  17 Mar 2015; Justin Lecher <jlec@gentoo.org> tcl-8.5.17-r100.ebuild:
  Add necessary Blocker, thanks kobboi for reporting

*tcl-8.5.17-r100 (17 Mar 2015)

  17 Mar 2015; Justin Lecher <jlec@gentoo.org> +tcl-8.5.17-r100.ebuild,
  tcl-8.5.17.ebuild:
  Drop old; add SONAME SLOT

  16 Mar 2015; Mike Frysinger <vapier@gentoo.org> tcl-8.5.15-r1.ebuild:
  Mark arm64/m68k/s390/sh stable.

*tcl-8.6.4 (13 Mar 2015)

  13 Mar 2015; Justin Lecher <jlec@gentoo.org> +tcl-8.6.4.ebuild,
  -tcl-8.5.16.ebuild, -tcl-8.6.1-r1.ebuild, -tcl-8.6.2.ebuild:
  Version Bump; drop old

  12 Mar 2015; Agostino Sarubbo <ago@gentoo.org> tcl-8.5.17.ebuild:
  Stable for amd64, wrt bug #543022

  23 Jan 2015; Justin Lecher <jlec@gentoo.org> tcl-8.6.3.ebuild:
  Sort eclasses

*tcl-8.6.3 (19 Dec 2014)
*tcl-8.5.17 (19 Dec 2014)

  19 Dec 2014; Justin Lecher <jlec@gentoo.org> +tcl-8.5.17.ebuild,
  +tcl-8.6.3.ebuild:
  Version Bump

*tcl-8.6.2 (15 Sep 2014)
*tcl-8.5.16 (15 Sep 2014)

  15 Sep 2014; Justin Lecher <jlec@gentoo.org> +tcl-8.5.16.ebuild,
  +tcl-8.6.2.ebuild:
  Version BUmp, #522092

  15 Sep 2014; Agostino Sarubbo <ago@gentoo.org> tcl-8.5.15-r1.ebuild:
  Stable for sparc, wrt bug #512012

  25 Aug 2014; Agostino Sarubbo <ago@gentoo.org> tcl-8.5.15-r1.ebuild:
  Stable for alpha, wrt bug #518006

  23 Aug 2014; Agostino Sarubbo <ago@gentoo.org> tcl-8.5.15-r1.ebuild:
  Stable for ia64, wrt bug #512012

  21 Aug 2014; Agostino Sarubbo <ago@gentoo.org> tcl-8.5.15-r1.ebuild:
  Stable for ppc64, wrt bug #518006

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> tcl-8.5.15-r1.ebuild:
  Stable for ppc, wrt bug #512012

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> tcl-8.5.15-r1.ebuild: