@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX tcl-8.4.15-tclm4-soname.patch 477 SHA256 2130b8b5fdddadfca35b74e9432d2651733e4f1c7b13d66ffc87b6995865076b SHA512 280295134a053469defb095ccc447bbdd96b75a415eec099bf8aae8b9e5f271766a0228d6646dea564501f697454eb8ffa32d6f0682825f6073f110aa22644b5 WHIRLPOOL bab6dd5ee47af6498d528a9766ae74ab820156f1f4fea987b1e41e5f01da9e4d1176111e806b2afc5db54bc0a563eae05aa712343424ffe711e363fbe73bc23d
 AUX tcl-8.4.16-multilib.patch 988 SHA256 6df0027ee02c1f458e8ae5f07538e0838317d72d028c6e1af97e8433d866b0ce SHA512 a86803a3d676bdea8c601dde47806ab0516dd421f4cf6a375b16d12bc4a68130dc1d5ec4c8de0088b385a17d8bbc0289b08cded6d1c0fa78f686615b1006865a WHIRLPOOL 1768af16e193aa99f24b868586bf8f4b40b0d76a2cfb403269c63c891c11d3832fca4560cb9c61a3f9a11d431f8d3e59b9ad92e32989550dbd4b5b0333c88db1
@@ -22,27 +22,15 @@ DIST tcl8.5.17-src.tar.gz 4546317 SHA256 4c7cd8f2e0900cb36dde899b3f9f4d5c471ee3c
 EBUILD tcl-8.5.13-r1.ebuild 3703 SHA256 eef3815b430316dbefc11c7b3be061e1fb68e00c3b8a8fa652368cb40eab3fba SHA512 bd9631a7deaae6dcad8bc8542fdfe4f8c77b9d75fb156924e2a5f183099b6e11f5d48369c8f998644abace078f68d53d2034a886bb59c4fd31d2d3ff5fa8a18c WHIRLPOOL 8d1079112e9b822d392a8177c4f64aa87e3e6b2a0072cfb7c5c024b80e057b0d93402353ebc39ef4cc9fa115ebe63cd1da878f5bc989351ca925409602d64a90
 EBUILD tcl-8.5.15-r1.ebuild 3843 SHA256 3f580e39dd34b50e013dcc36b2b3a6101d0210d4b3a8f0c50efe628a7907a883 SHA512 9c4d646d04ffaf27f27e6ad847c8ca5ecbd70b1e2c1795eac7328bdc5ddecf7b9f3f3352093d852cd675d61a729b4725ce5583c24ee067d21746535b0845694e WHIRLPOOL 3d79a0c593368edb26a217c6d30ddc2610356a8d15148430067f90c4eb946f64c8e692dd0da508748bb0988abbf62c5e85a136f78668e28a996db5f30f6df86b
 EBUILD tcl-8.5.17-r100.ebuild 2863 SHA256 b2ad51235527b7daee581778c42c126056a46af220d448beefbf47d90da2c521 SHA512 8efbd8a231ecfacfd063ca5ddbf94ec7babea9505ffe24cc8a6c6c18d177a34e393936ddae934939c66a39061c513dcec9e39719ed8cbc0c902992ba770a4a41 WHIRLPOOL 3ee67fadf6b0609082cb975931d97323644a999f64ab3f5a189d47486aaf685d21a0ad704ca13340b355598262c1ec127ca2bbec880cc210ca848838acf64a32
-EBUILD tcl-8.5.17.ebuild 3786 SHA256 eb9f496c3f5f5a8a2872c7c4d1526b95b445710fad9213ab52c5ce7facd3d8ba SHA512 0d2f3ad13463a4924eb97a416ce2323526a56c4d1dbe878e2b8163af0177fc1e77a01740bd55d903da6ed10a5faf50bdff74460e959b175e29b9a9c4c93f2da1 WHIRLPOOL 48fa180d23bf7afc688d8ff391700e2c1fc781c1547a665d4e8dcdb51c730c34de159e33238e549673214f893a02ca9669075455b7afc1e8e4b9683e20a048e4
+EBUILD tcl-8.5.17.ebuild 3784 SHA256 fd896274c4a599a7994c94f0fe522197b6c71ace82f410403ce31b57a5b560c4 SHA512 cc165503c830e07c05e64f13592a9df25601caa5f954c6c7e7b7a7746f42cf30340143a303b9428e6e3d649f1d0f36b1a8f33a5d60acded29307d1ddaa30a612 WHIRLPOOL 86e77eb34051a5b5ed493345e35c0d631bed17d4e66b4138b6e0526ff6bb83b7e12733d53f5bef62b4640091696c456f08eb3e86c0229b56e485daea6fded983
 EBUILD tcl-8.6.3.ebuild 3926 SHA256 9d2df77fae006e1f6b4f77c4fb3abb4446d549e3b44f6ca318f55e48f2d0658b SHA512 9da3d47e83146b6e5348271c97225423c0583b624c528fe17d835db505a72542b963104eb57c32c8632911efa8905e6580554d0b34f61a2fc705aba7d7a2dbb6 WHIRLPOOL fb9a8c9a270743a4878628427375cfd0d997a23e54795d58424aab18aefe90efea09a184cf4ed3f6a614ae449da944a055021a66782b5fe9365193724574e20f
 EBUILD tcl-8.6.4.ebuild 3956 SHA256 01e34fda3ae3aec349a6e12313dcc2ed4d894d5b109015cafd920ab78901ba7e SHA512 f1a20594e5be1c4e590dbfaaa381c5235e59a93565f3edbcd4d954b84d050cac48805464da8c0f52209b3a69424e605e2d087c400ea5cf774d02e772544bd635 WHIRLPOOL 927eb2770dc1cd5d9b07ef7a4a55b5c31abdec402cfb16d9aa0af6e9cf520a45cb0e5e66d792dee96af036be227de213667fcde11501f95062878db9183b9af1
-MISC ChangeLog 27394 SHA256 7b3304c6245a3aa21f954668f04db9f105056f916f95dd7327684c36ebfeabeb SHA512 39c372dac8d27543437a7d0ec10362c06f5bfdfb47a28f429f1ce2f27653bccbdb01a54ad9e296b316b34294ab9552ac514405eaa7a7d242df1a4a164f70ad4c WHIRLPOOL 8a625c964b654bb557a9bb75fe8073fa1848d93f14e4c8a105d566de62c6267a722ae996c1a4fc654b933157d2d0f2c7ffcd2579f3220d492f1bb9bf485c34f1
+MISC ChangeLog 27493 SHA256 2d8310ca37fd4f385c4a998ac8ff8e2853e3dc8c19f974ffafe243993e3d94cd SHA512 163419dc5bb07b81bc6df0ad164adb03bea99fbbb8ca1591c843446a4ae76d3834f77110b5703cb9a818328c6ea0c87340238d2c07e2b69618b53134e79a91e9 WHIRLPOOL 1107d90e1fd4c5650a90b4f3379b002122d51a5f739e93619cccc9a1abeeb7b147244fce7748e61df4b3897df0ce6260cb4b39cf932187b8b4c8b01a204a77dc
 MISC metadata.xml 271 SHA256 55e82636b02ffc7d7c033812851e6bf197a6e2b797fb8b5ee13c59c31246a0ba SHA512 f667a280785dbd69bfb4a0d78cc197e40196a2017f6f9c7fc3e4ed8846dda9608b2e9c9b01b94ab0d57b445fb3080d5fdcfc48d40def19bf90a5edaf188c5372 WHIRLPOOL 1447b7739ba725f572bb5c713d56867e3c5fc2dbad4bfd708d5b2ca8d50e74ff24bda238a3d30aaebb50457a87a8e9528c573fc3a443b6ee12e85a2b24514eeb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVCHZyXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirs4gP/2gXzLrKZZlewl86LaC3P/SR
-6MqSVTm6FVbc1CubjLFLFX+KbOB0xEC5B5bl5Ytl/O2DTq2oiVh94772N5Focw/R
-1N46dX7SJz2Oygydw+CjjE+kQ3KEtoGOeKhP/T++7szv3VIJeWsIiuybB8w4Yrlt
-QnAK3UjSwavadaU90rsDMAAsB8kytQMTFfp8E0lT7SLp9Xo4QXIH55767lrcwaRa
-8/JTnQbF4Y7QHMRDjCVtk+vI3eaJ4PI9Ho9nkhrcGaanpZ8uTOpfU+XESr4ifzK8
-X9KXSS1qowo1bDdAaoC/Gssa3TCQscg+cEAH2d526Bvh6j4EzJYoYDa2Ld4gRZch
-yJGKVHtKRoO5nPu1M8C66OduNdXWy1zwMzw5XKRbSkqour9isEr8mSBmLbiEQ36R
-zGJgBV6vc/AQlQoaWYNnUANBAptuYuV42VqhE7Yg5RLrAWWzPT3yMmZ9/PDEdEUt
-mUTds/+UlUIJHbZkhkZLDb9bthKlESWvrqalwTkzx8ugNYtrkVLHfXuAx5Zo24mO
-ErSQsGGgR+FVc5dLrrUZ4KsX2BePiyF8RdNHUvdN1yUGK+1eDkHBlMc0Pj9pQlyn
-BVGxOnVgM2Crkyvw6WMic1A9Zv21vJdRg8ZtEeob+ZFohsIiF5BykaEywf+DJc/s
-JePB/B3DqZRspN6nNVA5
-=HUob
+iEYEAREIAAYFAlULvVgACgkQVWmRsqeSphPOdwCfYyl1VncppwE/Kjxq8W41qrif
+m8YAnj+KyD9A0l7Spcs3ttpdFUuZzTnL
+=GIB3
 -----END PGP SIGNATURE-----
