@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX tcl-8.5.9-gentoo-fbsd.patch 475 SHA256 5f7c415260c124f7515b8621535ba277add91b584149283543a92f5f2613dc75 SHA512 4cab5fefca03337a9f74e0df330d055ff9ebb930a3a84ef84aa45399faf9685f4a7c5c9f86b1bc71dd8a13b7ed7b42ac4485081f358f5fd28892e6ff277a2a63 WHIRLPOOL 02454a19ac2c1a25306676306b4c13fb882463c577545b65a3e3aaf93f6b3e0eb5b91c6e2c86fae601c5a7b1dc2bf6ec99be75aa4b335a16008a55427cd27d4d
 AUX tk-8.4-lastevent.patch 1095 SHA256 73bdd40b9e04ad705ac8956ea96967aaee5ac8ee9588a43e5c1bf30d50c0996d SHA512 50b804357484e5fb90ad1d3560db107cde8b2b0ae0363c152276fa941a21c19705ccee0e26265264bcd06c0cafb1ed90f6f5b413ff0851d0658ac03250a8aaf6 WHIRLPOOL 2c5a87016a6e7e7bbcd3ef82a70c00c1a152c70fe4409bf4f7a5c17e8b920adddc7d63deb0ac1662dfa882435db3e222311512a3317023a4c96acb4ebbd0510f
@@ -24,27 +24,15 @@ DIST tk8.6.4-src.tar.gz 4266426 SHA256 08f99df85e5dc9c4271762163c6aabb962c8b297d
 EBUILD tk-8.5.13-r1.ebuild 3652 SHA256 a1ce6872e84379f287de37dc247d996c8599ec51d14440a85bb6a9b098cb8bde SHA512 60bf657400a6677a8c28ee38da6ef647ec5ffa9b6c7d281268e29563e62ba0d5b331709e53764450bf5bf4adb053ecec6184ff53c0b0549f9078802eb979ff9c WHIRLPOOL b534fb04ae39bca427f4deada2a2cc13dbb90e8d87c6e9330f5bdfefd93460470bc00e485cd0d669a48bd744063eaeb44d6c297de020f729736c56b980302324
 EBUILD tk-8.5.15.ebuild 3691 SHA256 1da8fa62921caeed59688b104d20f7688d9e8b56ce7b1f1b9a170cf0c6a3ef56 SHA512 5634a18d2e3a3eea18a92ced56b9f5ca7363244eb7d99ea1e6aa94f83aa988cd61ce813885d85171a2a8f25532e6ff8e7f03437abc8c178ded678867bd590670 WHIRLPOOL 72b20e2898ca2d4fbdc17d16f7839efcd5df840e0a97e5b115453d995bd012c774c86d0a677fe03e8ab6c52f1fb1f48897154851b95749d1c30e8b7048ff1e8d
 EBUILD tk-8.5.17-r100.ebuild 2204 SHA256 82a7daee63c5b03ec771416dba4047ca753486b08f4507107d8ddc0e913d3eed SHA512 87e442a87a269595669ff64462e2bcb89db0a15c24158037a597927d17001e71611b4a943f32748f4f6d6f41554c531c7213489699a50afb971fd42aea12f0cb WHIRLPOOL ad17a5f465ddf35d02a15e6cdc7194c07cc283e3b7531302a9e28573ecabb8518a8e8dcacdc9dd8a19be13bd46ee30af5391719ac442c71d46cb1ddba205c964
-EBUILD tk-8.5.17.ebuild 3554 SHA256 b58b8445365b0b92f783de5ef6c1aee072bc0de900fa282446b2aecc424fe6be SHA512 d5f14bb3b3b112a76c5b053f04364d93f7f5d351e94b30f0fd1c3e878ef7bcbc9abde1cd77eed253fde8aa15f17e097efdc6f064ab71dd235b9af795c8b3d1b8 WHIRLPOOL 96d24e73f3e9e0d1cad9cf98c32a981c10eced610560067603fd2a438c505e935b6fef2b9d95f79a2bed1c5de020a903c5f6efc0315bdc4edee01c09829c9d27
+EBUILD tk-8.5.17.ebuild 3552 SHA256 4838f0f16a16fa60e947e07de2230c51ed24d8612b34c03f44dc106d71998553 SHA512 ff8ff0cff03b07d720af45369bc3c808b29da573456be56cadfeb98dbc84e5c71d07058b60078b5865625d938af27cfef08bbbafb250d56feae8f45927b288c4 WHIRLPOOL 5072e99737d64826b6e869609f3b71a0322475b569774b6c38a200c57b0c9a4d651b1029f82fb24163d7a82b58236f47f1af5b5d7e2104f4677bee0b52a709ba
 EBUILD tk-8.6.3.ebuild 3980 SHA256 adf8f5dfc9c7e0e6991d7a8a4f76948f308c4c95d555630040002a04e7b60e3e SHA512 dc3d9b9ab1af819eb93fedf1934b5e490b6ad305243cab9c764b6143585e818c050cb0dff158a50dec15bec1342384ecf53d25c8c451ad25c82c814023d00cfd WHIRLPOOL 25bf1718a1a2498cb73bd446b13ee663bf6d652f6a2cafb05f8838ad79060131c0c85bc24a5962f41449b3c117222543822f64ae245cd5a077e4f206ecb70cc8
 EBUILD tk-8.6.4.ebuild 4010 SHA256 958527860adc18ebf4016144ccc2fc8b135e547f1edd71f054c57606b236fe37 SHA512 71ef13920272d376303fd357052e72b15b3186be6c88865ae2721ec1963487eeb19d7482b484ccd019f3fe5452c52e22757e54388c3a27b17d1bc3620d296958 WHIRLPOOL 32d090db79d00333571f10037c8ca2aa0650f706e87b34ea765618c41ba421e571561398aa775001e6d15cc8c3e45e886401c5bf1e7938d400593806129d40d8
-MISC ChangeLog 28441 SHA256 ba507e6a4117279acd0738b9aadb236b5973234944c9c628ed91c89f08fb76da SHA512 45cc1435b7c12713ba0a74ddb7716c7ca149f7c2acbfc36c4942adea297e7351e1983c12bf8e27ec9d2ebedbf905ea9a4f63db3b37c4053aa98bf1c803ce0463 WHIRLPOOL 3d8d008a07dae33667da25fd5466a3f7b66597ae1957718560ee8d076b6ed71764178c5a7bd68d3e12f8ed1f552361dd1954b462c9efbb103fe28425c54a9b4e
+MISC ChangeLog 28539 SHA256 af9c674dd9ad9efa56844c21e397292ef385246e8ecb4d2edb5848329f019370 SHA512 9a365de4d7a0d86d478b9313903ad82e9a05db06cd0516972a47061513a72ac57adaf5e7373cb91b7ba274b75cd4f4ff67c8245725753b7163ca32b63fbdf915 WHIRLPOOL fde49ec4c6de721f0f0eecf84325ed396d248bce3a4a5e8f4a27713944cbf9501de801a0418d40e9fbc1c6a9e23cba7b8ca09c0bc22b215ad56d898ce0875643
 MISC metadata.xml 160 SHA256 225a6f78d287329cdf2f4ed57468be28bd6565fd9a62207c2cc48e25ac9d3537 SHA512 a50627bda9ed953daf422b5a2e89b5b64e296d1a023d767c8a4ebb2cd51cd0036cecce455762a54e7d669f94d17d9de21052bac94fc08b1365ef42eb2f267742 WHIRLPOOL 61fa22d50aaf2bdecc467e26c9675cf7949ad55a4a8821730c91d1bd73f83fc4c35660851961310efa450e337a7ef572a925e186b8b05984d6315efc509fd365
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVCHYpXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir0fIP/jz/GK0jtmz2uAvBTFQ7Qt9o
-vFOepy8y4CX0BDxCrY9BmGZ5hIdHC+Ahb+xyOKhZ+dQYDGuL2Hiso5HB6itAbOXc
-3Ta3r/waiAE9XH8QT9a2JjvfgRf8TredsVLe2dkNgT5HS6eqghoFVU2zbO4aUW80
-2x5IEqDYoBn3syD3IC/1dpniNbXWhTWFehgVxL6qpvn1FPzpEIqIwePnvo39ur+E
-jSwFqdbibeUJ2KOtpf16lW3N8bDM74FwOyZHbByPnNtDv6KCBmEtGZSh+Ky+Z4eo
-0nsGQbyFMh4BvOn3PAKF1ju+63GToqcG9FBWeWj4ljUkb5i/fnTO9t6f5vtM553F
-v6Na96ejmyy+EO4qtvU/WJ3Pe9uKlgJuJzwwdeYAGuIQJRUHCiyNITHAbzt0KcmT
-RJe1KY1HWodLh0TqA4te9GGFPgrGbqPMovcMopuGF209+SrWzZges3a6pvHGI93h
-azhfoWmkWVfzRTEmLhf4mXDgYavFLmUMngtKZcrW0EZ928mDY5YDPEru9vRfZVwp
-FJjflQWj3Agk9wGM89spPbYbCreY3BrAglE+zMuFlnDSuanadbv4Kd75AoYNwWus
-VwGct3/Y5nsua0KBWCv3r02Zn8g9XuSSXr0Uc3dT2GoaJUfNYSLS+kzkhId1qk0x
-Xhim85kFBCZ8LJcChD0d
-=m+IK
+iEYEAREIAAYFAlULvbMACgkQVWmRsqeSphNlVACeKhkEx9h7w6mLvRNBzdTGqU8L
+YE8AnAnPN9+TtANsYf0QRBPV6i/UvLTX
+=r+Y5
 -----END PGP SIGNATURE-----
