@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST opera-beta_28.0.1750.31_amd64.deb 42286700 SHA256 f5e5cb86560b7944981308ee4953c8e8409fa84404be744d90db1a0f30802f06 SHA512 b206d90c5532ed72d67ccbb819ea8ea38439c475a9f803cd9e82b679a67ec0d85bbb754657f1e2083085ac212447b71d32a25d275bb75733d413af729403bae5 WHIRLPOOL 8445166ea0d3756875ac0144d46906a5462be2f2790f293683385f62c1913c6ec362d99b63ab1b6165d5002d50c444b3b1046105008f1afc441335ae834ce0e0
 DIST opera-beta_28.0.1750.36_amd64.deb 42891086 SHA256 0028d5b96c91216db3450c753ed39eb6edda4ef6373c9009442daa1eee9c81cd SHA512 755433273c9189c318609a3edcc6c7f17ad2eeb42ebf3663f32eef313e3d079eb2746073b5104cdd18bfbc04fdf32db144433ce7b799c8a8e42899264b77b547 WHIRLPOOL b4dbd4f6c4dfe8073c292f6cee6b1cd96b4dab8f55d9c836fe21c3bad4d26e1675e4665962989ddcb6273c37c4bc44f1e1a17926a0f8997b0162ce0bf845b7d0
-EBUILD opera-beta-28.0.1750.31.ebuild 1949 SHA256 bf09821b30f637c05d505b1c81498597960f1a59a9d08d6a5d18f5b1e0bdfafc SHA512 2f48c49ea1a9d032f140939399d36adaa77931d38813aa7d58847f585c0cd0a58d75d5c4cb7d3390733852d98cec61dab594d38108c110d8ca296c8e4ca028b4 WHIRLPOOL 4a5e484cf20748813edbefd9db9406400c0bb9d316e2ff2f1016def15d71707823cc7444b206902c4ea6993e15d4795c574610355607577731cd4c3be45df497
+DIST opera-beta_29.0.1795.21_amd64.deb 41882664 SHA256 070eb7dd0f65184366854b6ce04d8d80ce84cfdd8645fb82afcd43c138b9467f SHA512 eccce4a7a182b7b8a0f72067680cbff3f803cf1a724cf62a9746f880ee1916a6366c96b07562b3986c23294909ff80b81a09eaa65bf529a8115c01f0b7a29150 WHIRLPOOL 92b48e73e0f70ac98087e5679c75ad65a71ce2073d2c6f264e9ba7396a589f6e583f4050b1f780d9fecca6203eabf93ec69d6ddce215be0b56e2f70d99f0ad88
 EBUILD opera-beta-28.0.1750.36.ebuild 1949 SHA256 366a05a32fc9b76c8a75de3e776eab7b87967544af95826fed9ad04d0743716c SHA512 e3095138c2f79c53640691f758c83ea5aa5caf66b97003ea09262b25d53d917f32ff55032de286a5a94a1b7c68a75390dece51ed91ed26ef90cd5be934731d53 WHIRLPOOL 99d0495cccf90e6da391a13f3ac20f024e4f21a70e2074644d337e6651b6fa52bb09614fc9230af35aa13ea55873a22396113f218c36dabbba408eb89fa63292
-MISC ChangeLog 2914 SHA256 2bc88c96ce19884e174e213cddd56d086341b057b87b309f30c1b7f6a19bcb91 SHA512 fa022dd6f26deb9bb06cc950dcb92a96ef584a304db2866fd718445f840bf00ceaa69ebf7f8088123f5c36d46cd4bf0725fde74f0f2597573156ab9dce8f80b0 WHIRLPOOL a0017f5547ded726ebf3094faa4d17ff890fdbaa6c5cfaf1434053dda1881774304666004f75b87cea3fd0c12180ae791e81a2d179e6418ed4bdbde66255252a
+EBUILD opera-beta-29.0.1795.21.ebuild 1949 SHA256 21081d13b1c7ffcd9f62e9511945f1b6befd8834b3c900d838d2c9025e42cc1a SHA512 ddf2001e9bed3af1935e9750a4f4c508150c0a63498e4c6276d998b1d0bb8e971f51cfc2c107a6e35d46afdb4158b880ab7930caf6bd5bf4430b45417219ea2e WHIRLPOOL 9bde1df0f39eb41a0a2a47b84fe4cd67f7f7a40e638657795744f674f4ece4fdf503fdeae3db7fb97f0331908b467f0fef5b2f8d91b624df09d1d56dfe08f061
+MISC ChangeLog 3086 SHA256 d83cf41b0ee63fa9f60209fcf8584e0c13b6bafceb2dfd17a8846cddd5ff155b SHA512 4e063c80220ac15d2411c1fe91f0d1a835668375ec82f9df87c32a479bc39fd823864d22c5f357c77efb1bdc5c6e4908e5d6be931b0b82c255ac62fdd43756fc WHIRLPOOL f7f7306e841ac73e0c1361fb6405814873336cbbf04f5a0a2ade1ace9381f6030f972bec8e388d80a67a9ef6a2093846928fdd8b2de7674b655439950f7facff
 MISC metadata.xml 224 SHA256 d7ffc52704d4bc0180f6f1c448ea4bdd0e3ff3a562384dc944af4a00debc9620 SHA512 6487ad35c6f3d2e4876714919e7bb01fd65f57e7753cbfc318130727dded4fcf8632a06ab9b7a3016fc1ab127434d1d20de2dd0ef2cc63ad162023f2dbf64b1e WHIRLPOOL 879ad2c41f2e1297b677803b2b0478ed2affc91059b198524795e1a128cf8ab6b9fbe78b53bdd3421041f27b419bce387a267e389111125cd55b05e260abc998
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlT3HKEACgkQVWmRsqeSphMKoQCdH7JCnJfslZPrZ3+mw3Ty2rwz
-rOYAmgJV/nYFMZWXOy+VdNIZvl4jqNEh
-=BM9w
+iEYEAREIAAYFAlULumUACgkQVWmRsqeSphMSYgCfVztbF7/jwE0ixTHaH5ON/wb/
+TpoAn0kG/PKkS+tvgGJvXPho3cv8WUiT
+=M7Zx
 -----END PGP SIGNATURE-----
