@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/tk
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/tk/ChangeLog,v 1.214 2015/03/17 18:44:46 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/tk/ChangeLog,v 1.215 2015/03/20 06:26:58 jer Exp $
+
+  20 Mar 2015; Jeroen Roovers <jer@gentoo.org> tk-8.5.17.ebuild:
+  Stable for HPPA (bug #543022).
 
   17 Mar 2015; Justin Lecher <jlec@gentoo.org> tk-8.5.17-r100.ebuild:
   Add necessary Blocker, thanks kobboi for reporting
