@@ -1,6 +1,12 @@
 # ChangeLog for www-client/opera-beta
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera-beta/ChangeLog,v 1.16 2015/03/04 14:54:24 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera-beta/ChangeLog,v 1.17 2015/03/20 06:12:52 jer Exp $
+
+*opera-beta-29.0.1795.21 (20 Mar 2015)
+
+  20 Mar 2015; Jeroen Roovers <jer@gentoo.org> -opera-beta-28.0.1750.31.ebuild,
+  +opera-beta-29.0.1795.21.ebuild:
+  Version bump.
 
 *opera-beta-28.0.1750.36 (04 Mar 2015)
 
