@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/tcl
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/tcl/ChangeLog,v 1.209 2015/03/17 18:46:05 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/tcl/ChangeLog,v 1.210 2015/03/20 06:25:27 jer Exp $
+
+  20 Mar 2015; Jeroen Roovers <jer@gentoo.org> tcl-8.5.17.ebuild:
+  Stable for HPPA (bug #543022).
 
   17 Mar 2015; Justin Lecher <jlec@gentoo.org> tcl-8.5.17-r100.ebuild:
   Negate the blocker
